Tab选项卡切换效果

--- a/project/tap-nav/index.html
+++ b/project/tap-nav/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Tab切换</title>
+		<title>Tab选项卡切换效果</title>
 		<link href="style.css" rel="stylesheet"/>
 	</head>
 	<body>
