--- a/project/go-top-js/demo.html
+++ b/project/go-top-js/demo.html
@@ -8,11 +8,12 @@
 			#btn {
 				width: 40px;
 				height: 40px;
-				position: fixed;
+				position: absolute;
 				right: 65px;
 				bottom: 10px;
 				display: none;
 				background: url(images/top_bg.png) no-repeat left top;
+				background:red;
 			}
 			#btn:hover {
 				background: url(images/top_bg.png) no-repeat 0 -39px;
